package ge.edu.freeuni.patterns.state;

public enum VideoPlayerMode {
	PLAYING,
	STOPPED
}